Extend activity search filters
